# 048.uav-flight-core

./: .gitignore  README.md  docker-compose.yml
communication-link/: CMakeLists.txt  Makefile
communication-link/crypto/: auth.c  auth.h  crypto_manager.c  crypto_manager.h  key_exchange.c  key_exchange.h  sm4.c  sm4.h  tls_manager.c  tls_manager.h
communication-link/examples/: CMakeLists.txt  Makefile  example_encrypted_comm.c  example_mavlink_comm.c  example_multilink_mux.c
communication-link/include/: communication_link.h
communication-link/mavlink/: command.c  command.h  encoder.c  encoder.h  heartbeat.c  heartbeat.h  mavlink_v2.c  mavlink_v2.h  mission.c  mission.h  parameter.c  parameter.h  parser.c  parser.h
communication-link/mavlink/messages/: common.h
communication-link/tests/: CMakeLists.txt  Makefile  test_mavlink_parser.c  test_sm4.c  test_transport.c
communication-link/transport/: fragment.c  fragment.h  link_monitor.c  link_monitor.h  tcp_transport.c  tcp_transport.h  transport.c  transport.h  transport_mux.c  transport_mux.h  uart_transport.c  uart_transport.h  udp_transport.c  udp_transport.h
deployment/prometheus/: prometheus.yml
deployment/sql/: init.sql
flight-control/: Makefile
flight-control/App/Algorithms/: coordinate.c  coordinate.h  ekf.c  ekf.h  pid_controller.c  quaternion.c  quaternion.h  thrust_learner.c
flight-control/App/Drivers/: 4g_driver.c  4g_driver.h  barometer.c  barometer.h  gps_ublox.c  gps_ublox.h  magnetometer.c  magnetometer.h  mpu6050.c  mpu6050.h  pwm_output.c  pwm_output.h  rgb_led.c  rgb_led.h  sbus_rc.c  sbus_rc.h  uwb_driver.c  uwb_driver.h
flight-control/App/Tasks/: task_attitude_estimation.c  task_attitude_estimation.h  task_blackbox.c  task_blackbox.h  task_flight_control.c  task_flight_control.h  task_formation.c  task_formation.h  task_geofence.c  task_geofence.h  task_health_monitor.c  task_health_monitor.h  task_link_manager.c  task_link_manager.h  task_mavlink_comm.c  task_mavlink_comm.h  task_mission.c  task_mission.h  task_motor_control.c  task_motor_control.h  task_obstacle_avoidance.c  task_obstacle_avoidance.h  task_sensor_read.c  task_sensor_read.h  task_thrust_learner.c  task_thrust_learner.h  task_tracking.c  task_tracking.h
flight-control/Core/Inc/: attitude_estimator.h  blackbox_logger.h  flight_config.h  flight_controller.h  formation_manager.h  geofence_manager.h  link_manager.h  main.h  mavlink_handler.h  mission_manager.h  motor_control.h  pid_controller.h  sensor_manager.h  stm32f4xx_it.h  thrust_learner.h  tracking_manager.h  types.h
flight-control/Drivers/: mmwave_radar.c  mmwave_radar.h  stereo_vision.c  stereo_vision.h
groundstation-backend/: .env.example  Dockerfile  go.mod
groundstation-backend/config/: config.yaml
groundstation-frontend/: .env.example  .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
groundstation-frontend/src/: App.tsx  index.css
(+284 files in other folders)
